Fixed image not found overlapping with attribute name

--- a/packages/scandipwa/src/component/ResetAttributes/ResetAttributes.style.scss
+++ b/packages/scandipwa/src/component/ResetAttributes/ResetAttributes.style.scss
@@ -40,6 +40,10 @@
             object-fit: contain;
             vertical-align: middle;
         }
+
+        .Image-Content {
+            position: initial;
+        }
     }
 
     &-CloseIcon {
